--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,8 @@ events { worker_connections 1024; }
 
 http {
     upstream backend {
-        server app1:9999;
-        server app2:9999;
+        server app1:9999 max_fails=3 fail_timeout=30s;
+        server app2:9999 max_fails=3 fail_timeout=30s;
     }
 
     server {
@@ -12,6 +12,19 @@ http {
 
         location / {
             proxy_pass http://backend;
+
+            # Timeout e keepalive para performance
+            proxy_connect_timeout 1s;
+            proxy_read_timeout 5s;
+            proxy_send_timeout 5s;
+
+            # Passa o Host e IP original para o backend
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # Evita buffering para respostas rápidas
+            proxy_buffering off;
         }
     }
 }
