--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.8"
 
 services:
-  app1:
+  rinha_1:
     build: .
+    init: true
     networks:
       - backend
       - payment-processor
@@ -11,15 +12,19 @@ services:
       - PAYMENT_PROCESSOR_URL_FALLBACK=http://payment-processor-fallback:8080
       - X_RINHA_TOKEN=123
       - REDIS_ADDR=redis:6379
-
+    ports:
+      - "9991:9999"
+    depends_on:
+      - redis
     deploy:
       resources:
         limits:
-          cpus: "0.75"
+          cpus: "0.625"
           memory: "300MB"
 
-  app2:
+  rinha_2:
     build: .
+    init: true
     networks:
       - backend
       - payment-processor
@@ -28,26 +33,34 @@ services:
       - PAYMENT_PROCESSOR_URL_FALLBACK=http://payment-processor-fallback:8080
       - X_RINHA_TOKEN=123
       - REDIS_ADDR=redis:6379
-
+    ports:
+      - "9992:9999"
+    depends_on:
+      - redis
     deploy:
       resources:
         limits:
-          cpus: "0.75"
+          cpus: "0.625"
           memory: "300MB"
 
   nginx:
     image: nginx:alpine
+    init: true
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "9999:80"
     networks:
       - backend
+    depends_on:
+      - rinha_1
+      - rinha_2
+    restart: unless-stopped
     deploy:
       resources:
         limits:
-          cpus: "0.1"
-          memory: "50MB"
+          cpus: "0.15"
+          memory: "70MB"
 
   redis:
     image: redis:7-alpine
@@ -55,11 +68,20 @@ services:
       - "6379:6379"
     networks:
       - backend
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
     deploy:
       resources:
         limits:
           cpus: "0.1"
           memory: "50MB"
+    tmpfs:
+      - /data
 
 networks:
   backend:
