--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -73,7 +73,7 @@ services:
   nginx-lb:
     image: nginx:1.27.0-alpine
     volumes:
-      - ./nginx.config:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - transaction-api-01
       - transaction-api-02
