--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,20 +1,26 @@
+
 FROM golang:1.24-alpine AS builder
+
 WORKDIR /app
+
 COPY go.mod go.sum ./
 RUN go mod download
-COPY ./ /app
-ENV GOFLAGS="-buildvcs=false"
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -trimpath \
-    -ldflags="-s -w" \
-    -o galo .
-RUN apk add --no-cache file
-RUN file galo
+COPY . .
 
-FROM alpine:latest
-COPY --from=builder /app/galo /usr/local/bin/
-RUN chmod +x /usr/local/bin/galo
+ENV CGO_ENABLED=0 \
+    GOOS=linux \
+    GOARCH=amd64 \
+    GOFLAGS=-buildvcs=false
+
+RUN go build -trimpath -ldflags="-s -w" -o galo .
+
+FROM scratch
+
+COPY --from=builder /app/galo /galo
+
 ENV GOMEMLIMIT=64MiB \
     GOGC=100 \
     GOMAXPROCS=1
-CMD ["galo"]
+
+ENTRYPOINT ["/galo"]
