feat: Update configuration settings for improved performance and resource management; adjust Redis connection pool and increase queue capacity

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,5 +1,5 @@
 x-template: &template
-  image: joelgarciajr84/rinha-backend-go:rinha-redis-galo2-de-briga
+  # image: joelgarciajr84/rinha-backend-go:rinha-redis-galo2-de-briga
   build: 
     context: .
     dockerfile: Dockerfile
