--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,9 +1,10 @@
 worker_processes auto;
+worker_rlimit_nofile 262144;
 
 events {
-    worker_connections 2048;
+    worker_connections 8192;
     use epoll;
-    multi_accept on;
+    multi_accept off;
 }
 
 http {
@@ -14,27 +15,38 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
 
-    keepalive_timeout 5;
+    keepalive_timeout 10;
     keepalive_requests 100000;
 
+    proxy_http_version 1.1;
+    proxy_buffering off;           
+    proxy_request_buffering off;   
+    
+    proxy_connect_timeout 100ms;
+    proxy_send_timeout 2s;
+    proxy_read_timeout 2s;
+
+    proxy_next_upstream off;
+
+    proxy_set_header Connection "";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
     client_max_body_size 0;
+    reset_timedout_connection on;
 
     upstream galos {
         least_conn;
-        server galo01:80 max_fails=1 fail_timeout=1s;
-        server galo02:80 max_fails=1 fail_timeout=1s;
-        keepalive 100;
+        server galo_01:80 max_conns=512 max_fails=1 fail_timeout=1s;
+        server galo_02:80 max_conns=512 max_fails=1 fail_timeout=1s;
+        keepalive 512;
+        keepalive_timeout 60s;
+        keepalive_requests 100000;
     }
 
     server {
-        listen 80 default_server;
-
-        location / {
-            proxy_pass http://galos;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "keep-alive";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+        listen 80 reuseport backlog=8192;
+        location / { proxy_pass http://galos; }
     }
 }
