feat: Add build and publish script; embed commit SHA in Docker image and update Dockerfile for improved tracking

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,9 @@
 
 FROM golang:1.24-alpine AS builder
 
+ARG BUILD_COMMIT
+RUN echo "Commit: ${BUILD_COMMIT}" > /commit.txt
+
 WORKDIR /app
 
 COPY go.mod go.sum ./
