--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,5 +1,6 @@
 x-template: &template
-  image: joelgarciajr84/rinha-backend-go:rinha-redis-galo4-de-briga
+  # image: joelgarciajr84/rinha-backend-go:rinha-redis-galo-99-de-briga
+  build: .
   environment:
     PAYMENT_PROCESSOR_DEFAULT_URL: "http://payment-processor-default:8080"
     PAYMENT_PROCESSOR_FALLBACK_URL: "http://payment-processor-fallback:8080"
@@ -57,5 +58,6 @@ services:
           memory: "50MB"
 networks:
   backend:
+    driver: bridge
   payment-processor:
     external: true
